...
        view.init()
    }, [])

    return <Screen preset={ "scroll" } style={ { minHeight: "100%" } }
                   statusBarBg={ Colors.white } backgroundColor={ Colors.white }>
        <Header title={ !view.showRecoveryPhrase ? t("settingsScreen.menu.recoveryPhrase") : undefined }/>
        { !view.showRecoveryPhrase && <View flex paddingV-20 testID={ 'recoveryPhrasePage-1' }>
            <View row center>
                <RecoveryImage/>
            </View>
            <View row padding-16 paddingT-30>
                <Text text16 robotoR>
                    { t("settingsScreen.menu.recoveryDescription") }
...
                    getBannerStore().setSuggest(BANNERS_NAMES.CHECK_SEED, true)
                } } disabled={ !view.understandRisc } br50 label={ t("settingsScreen.menu.recoveryBtn") } absB/>
            </View>
        </View>
        }
        { view.showRecoveryPhrase &&
            <View flex paddingV-20 testID={ 'recoveryPhrasePage-2' }>
                <View row paddingH-16>
                    <Text text16 robotoM>
                        { t("settingsScreen.menu.recoveryPhrase") }
                    </Text>
                </View>
                <View row padding-16>
...
