...
        style={ { minHeight: "100%" } }
    >
        <Header icon={ ICON_HEADER.CROSS } rightText={ t('selectValueScreen.step') }/>
        { view.initialized && <>
            <View padding-16 testID={ 'selectAddressScreen' }>
                <TextField
                    testID={ 'inputAddress' }
                    autoFocus
                    multiline={ true }
                    selectionColor={ Colors.primary }
                    errorColor={ view.inputAddressError ? Colors.error : Colors.textGrey }
                    validationMessage={ view.inputAddressErrorMessage }
                    onChangeText={ (val) => {
...
                                        <View
                                            style={ {
                                                borderBottomWidth: 1,
                                                borderBottomColor: Colors.grey,
                                                marginLeft: 10
                                            } }/>
                                        <Ripple testID={ 'betweenMyAddress' } onPress={ () => {
                                            if (view.txData.to === w.address) {
                                                view.txData.to = ""
                                            } else {
                                                view.txData.to = w.address
                                            }
                                        } } rippleColor={ Colors.primary }>
...
